# autonomous-ackermann-vehicle

./: README.md
Autonomous_Systems_Project_Team_23/: package.xml  setup.cfg  setup.py
Autonomous_Systems_Project_Team_23/Autonomous_Systems_Project_Team_23/: Autonomous_Systems_MS_2_OLR_Team_23.py  Autonomous_Systems_MS_2_Teleop_Team_23.py  Validation_Printing_Node_Team_23.py  Vehicle_Pub_Sub_Node_Team_23.py  __init__.py  m1_validation_print_node.py  m1_vehicle_pub_sub_node.py
Autonomous_Systems_Project_Team_23/launch/: Autonomous_Systems_MS_2_Team_23.launch.py
Autonomous_Systems_Project_Team_23/models/prius_team23/: model.config  model.sdf
github/: .gitignore
github/Autonomous_Systems_Project_Team_23/: setup.py
hardware/Autonomous_Systems_Project_Hardware_OLR_Actuators_Team_23/: Autonomous_Systems_Project_Hardware_OLR_Actuators_Team_23.ino
overleaf/: main.tex  references.bib
